# mini_tournament_system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: b9f3bf79e33a_init.py
app/: config.py  db.py  main.py
app/api/: tournament.py
app/models/: tournament.py
app/repositories/: tournament.py
app/schemas/: tournament.py
app/services/: tournament.py
tests/: test_registration.py
