[tool.poetry]
name = "mini_tournament_system"
version = "0.1.0"
description = "Mini Tournament System"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "app" }
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B"]
ignore = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
